--- a/src/main/resources/assets/expstore/lang/en_US.lang
+++ b/src/main/resources/assets/expstore/lang/en_US.lang
@@ -1,3 +1,8 @@
 < en_US.lang - English localization file >
 tile.expstore.expstore.name=Experience Store
+
+tile.expstore.expstore.gui.heading=Experience Store
+tile.expstore.expstore.gui.player=Player
+tile.expstore.expstore.gui.store=Store
+
 tile.expstore.expchanger.name=Experience Changer (only in DEV)
